eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gobank-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gobank-api
  template:
    metadata:
      labels:
        app: gobank-api
    spec:
      containers:
      - name: gobank-api
        image: 735542962543.dkr.ecr.us-east-1.amazonaws.com/gobank:76a7ad2231b954c26965ddc8b2a98be8bee98bd8
        ports:
        - containerPort: 8080
